--- a/Ex4/bootstrap/principal.html
+++ b/Ex4/bootstrap/principal.html
@@ -54,7 +54,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr>
+			<tr class="sucess">
 				<td>1</td>
 				<td>Ana</td>
 				<td>ana@web.com</td>
@@ -77,6 +77,5 @@
 			</tr>
 		</tfoot>
 	</table>
-
 </body>
 </html>
