--- a/Ex4/bootstrap/form.html
+++ b/Ex4/bootstrap/form.html
@@ -7,6 +7,14 @@
 <body>
 		<div class="container">
 
+			<div class="dropdown">
+				<button class="btn btn-default dropdown-toggle" data-toggle="dropdown">Menu</button>
+				<ul class="dropdown-menu">
+					<li><a href="#">Alunos</a></li>
+					<li><a href="#">Cidades</a></li>
+					<li><a href="#">Estados</a></li>
+			</div>
+
 			<div class="alert alert-success">Cadastro realizado com sucesso!</div>
 			<div class="alert alert-warning">Alguns dados não foram preenchidos!</div>
 			<div class="alert alert-danger"><strong>ERRO!</strong> Dados incorretos!</div>
