--- a/Ex4/bootstrap/form.html
+++ b/Ex4/bootstrap/form.html
@@ -3,6 +3,8 @@
 	<meta charset="utf-8">
 	<title>Form com Bootstrap</title>
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="./js/bootstrap.js"></script>
 </head>
 <body>
 		<div class="container">
