--- a/Ex6/introducao.html
+++ b/Ex6/introducao.html
@@ -6,9 +6,28 @@
 
     <script src="./jquery/jquery-3.2.1.js"></script>
     <script src="funcoes.js"></script>
-
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
   </head>
   <body>
+
+    <div id="titulo">
+      <h1>jQuery</h1>
+    </div>
+
+    <p class="h2">Texto 1</p>
+    <p class="alert alert-danger">Texto 2</p>
+    <p>Texto 3</p>
+    <p class="h2">Texto 4</p>
+
+    <div id="links">
+      <a href="http://www.ufop.br" target="_blank">UFOP</a>
+      <a href="http://www.icea.ufop.br" target="_blank">ICEA</a>
+      <a href="http://www.ufmg.br" target="_blank">UFMG</a>
+    </div>
+
+    <button type="button" name="exibir">Exibir</button>
+    <button type="button" name="ocultar">Ocultar</button>
+    <button type="button" name="mudar">Mudar Apresentação</button>
 
   </body>
 </html>
