--- a/Ex1/introducao.html
+++ b/Ex1/introducao.html
@@ -29,5 +29,14 @@
     <button type="button" name="ocultar">Ocultar</button>
     <button type="button" name="mudar">Mudar Apresentação</button>
 
+    <select name="estado" id="estado">
+      <option value="0">Selecione:</option>
+      <option value="1">Minas Gerais</option>
+      <option value="2">Rio de Janeiro</option>
+      <option value="3">São Paulo</option>
+    </select>
+
+    <button type="button" name="validar">Validar</button>
+
   </body>
 </html>
